# enki

./: Dockerfile  Gemfile  README.md  ci.rb  install.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: autocommit.yml  python-app.yml  run-unittests.yml  tests.yml  update-requirements.yml
docs/: enki-errors.md  error-msg.md  validation-errors.md
src/: buildyml-generator.sh  enki.py  enki_attribute_parser.py  enki_attributes_validator.py  enki_checks.py  enki_files_valiadtor.py  enki_files_validator.py  enki_msg.py  enki_regex.py  enki_sim.py  enki_yaml_valiadtor.py  lcheck.rb  oop.py  para.py  pcbuild_emulator.py
tests/: test_enki_checks.py  test_enki_yaml_valiadtor.py
tests/fixtures/: comments.adoc  few-comments.adoc  syntax-error.yml  valid.yml
