[metadata]
name = enki
version = 0.0.1
author = Levi V
author_email = levi@redhat.com
description = Validation tool for modular documentation
long_description = file: README.md
url = https://github.com/Levi-Leah/enki
project_urls =
    Bug Tracker = https://github.com/Levi-Leah/enki/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Cerberus == "1.3.4"; PyYAML == "6.0"; setuptools == "57.4.0"

[options.packages.find]
where = src
